Modified the notebooks - corrected for the missing price column

--- a/1_data_scraping.ipynb
+++ b/1_data_scraping.ipynb
@@ -143,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('toronto_listing_amenities_1', 'wb') as f:\n",
+    "with open('temp_pickle_files/toronto_listing_amenities_1', 'wb') as f:\n",
     "    pickle.dump(amenity_dict_available, f)\n",
     "    pickle.dump(amenity_dict_not_available, f)\n",
     "    pickle.dump(page_saved_dict, f)"
@@ -171,7 +171,7 @@
    },
    "outputs": [],
    "source": [
-    "# Merge multiple dictionaries from different pickle files into one\n",
+    "# Merge multiple dictionaries from different pickle files (the scraping operation was done in multiple stages) into one\n",
     "amenity_dict_available = {}\n",
     "amenity_dict_not_available = {}\n",
     "page_saved_dict = {}\n",
