--- a/3_data_neighbourhood.ipynb
+++ b/3_data_neighbourhood.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -136,6 +136,7 @@
     "from pandas import DataFrame\n",
     "import time\n",
     "import numpy as np\n",
+    "import cPickle as pickle \n",
     "from tqdm import tqdm\n",
     "\n",
     "base_path = '/home/hareesh/Research/big_data/project/airbnb/'\n",
@@ -278,17 +279,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9795, 81)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Merge all amenities data from the original airbnb scraped dataframe with \n",
     "# all neighbourhood facilites data from openstreet maps\n",
     "# into a single dataframe for exploratory analysis later\n",
     "df = pd.read_csv(base_path+'notebooks/listings_with_amenities_dataframe.csv')\n",
-    "df = pd.concat([df,df_neighbourhood.ix[:,1:], axis=1)"
+    "df = pd.concat([df,df_neighbourhood.ix[:,1:]], axis=1)\n",
+    "df.shape"
    ]
   },
   {
@@ -430,20 +443,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import cPickle as pickle # Save as pickle object\n",
     "with open('df_amenities_neighbourhood_all.pkl', 'wb') as f:\n",
     "    pickle.dump(df,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -452,33 +464,6 @@
     "with open('df_amenities_neighbourhood_all.pkl', 'rb') as f: # Retrieve saved pickle object\n",
     "    df = pickle.load(f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
