--- a/3_data_neighbourhood.ipynb
+++ b/3_data_neighbourhood.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -64,11 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 48 ms, sys: 12 ms, total: 60 ms\n",
+      "Wall time: 1.39 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Test Script\n",
@@ -77,6 +86,28 @@
     "lat_ = df.loc[i]['latitude']\n",
     "lon_ = df.loc[i]['longitude']\n",
     "loc = gmaps.places(query = 'park', location = (lat_, lon_))['results'][0]['geometry']['location']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'lat': 43.7668231, u'lng': -79.5053411}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc"
    ]
   },
   {
@@ -126,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -270,15 +301,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": false
@@ -286,11 +308,139 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant</th>\n",
+       "      <th>atm</th>\n",
+       "      <th>cinema</th>\n",
+       "      <th>hospital</th>\n",
+       "      <th>nightclub</th>\n",
+       "      <th>park</th>\n",
+       "      <th>mall</th>\n",
+       "      <th>gallery</th>\n",
+       "      <th>museum</th>\n",
+       "      <th>supermarket</th>\n",
+       "      <th>bus_stop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>585</td>\n",
+       "      <td>509</td>\n",
+       "      <td>5812</td>\n",
+       "      <td>5400</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>3269</td>\n",
+       "      <td>7227</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>9607</td>\n",
+       "      <td>1709</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>285</td>\n",
+       "      <td>1212</td>\n",
+       "      <td>5480</td>\n",
+       "      <td>4588</td>\n",
+       "      <td>1151</td>\n",
+       "      <td>2694</td>\n",
+       "      <td>6488</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>9476</td>\n",
+       "      <td>1213</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>858</td>\n",
+       "      <td>1267</td>\n",
+       "      <td>5561</td>\n",
+       "      <td>5063</td>\n",
+       "      <td>1622</td>\n",
+       "      <td>3368</td>\n",
+       "      <td>7074</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>757</td>\n",
+       "      <td>704</td>\n",
+       "      <td>5858</td>\n",
+       "      <td>5254</td>\n",
+       "      <td>1128</td>\n",
+       "      <td>3213</td>\n",
+       "      <td>7121</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>9675</td>\n",
+       "      <td>1681</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>529</td>\n",
+       "      <td>514</td>\n",
+       "      <td>5661</td>\n",
+       "      <td>5287</td>\n",
+       "      <td>912</td>\n",
+       "      <td>3115</td>\n",
+       "      <td>7089</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>9463</td>\n",
+       "      <td>1862</td>\n",
+       "      <td>145</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(9795, 81)"
+       "   restaurant   atm  cinema  hospital  nightclub  park  mall  gallery  museum  \\\n",
+       "0         585   509    5812      5400       1060  3269  7227       -1    9607   \n",
+       "1         285  1212    5480      4588       1151  2694  6488       -1    9476   \n",
+       "2         858  1267    5561      5063       1622  3368  7074       -1      -1   \n",
+       "3         757   704    5858      5254       1128  3213  7121       -1    9675   \n",
+       "4         529   514    5661      5287        912  3115  7089       -1    9463   \n",
+       "\n",
+       "   supermarket  bus_stop  \n",
+       "0         1709        72  \n",
+       "1         1213        77  \n",
+       "2         1200        85  \n",
+       "3         1681        25  \n",
+       "4         1862       145  "
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_neighbourhood.head() # -1 indicates that the facility is not present within the specified radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9795, 88)"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,13 +450,13 @@
     "# all neighbourhood facilites data from openstreet maps\n",
     "# into a single dataframe for exploratory analysis later\n",
     "df = pd.read_csv(base_path+'notebooks/listings_with_amenities_dataframe.csv')\n",
-    "df = pd.concat([df,df_neighbourhood.ix[:,1:]], axis=1)\n",
+    "df = pd.concat([df,df_neighbourhood], axis=1)\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -393,7 +543,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 80 columns</p>\n",
+       "<p>2 rows × 88 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -425,14 +575,14 @@
        "0  The bus stop is right in front of our home on ...   ...      509   5812   \n",
        "1                                                NaN   ...     1212   5480   \n",
        "\n",
-       "  hospital  nightclub  park  mall gallery  museum  supermarket bus_stop  \n",
-       "0     5400       1060  3269  7227      -1    9607         1709       72  \n",
-       "1     4588       1151  2694  6488      -1    9476         1213       77  \n",
+       "  hospital  nightclub  park  mall gallery  museum supermarket bus_stop  \n",
+       "0     5400       1060  3269  7227      -1    9607        1709       72  \n",
+       "1     4588       1151  2694  6488      -1    9476        1213       77  \n",
        "\n",
-       "[2 rows x 80 columns]"
+       "[2 rows x 88 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -455,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -464,24 +614,6 @@
     "with open('df_amenities_neighbourhood_all.pkl', 'rb') as f: # Retrieve saved pickle object\n",
     "    df = pickle.load(f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
