Added clustering and classification notebooks

--- a/3_data_neighbourhood.ipynb
+++ b/3_data_neighbourhood.ipynb
@@ -20,7 +20,7 @@
     "import time\n",
     "from googlemaps import Client\n",
     "\n",
-    "api_key = 'AIzaSyBzFFEQjBZ31RarU08DGmzaCkIftejrslM'\n",
+    "api_key = 'API-Key' # Insert code here from Google account\n",
     "base_path = '/home/hareesh/Research/big_data/project/airbnb/'\n",
     "gmaps = Client(api_key)"
    ]
