--- a/7_association_mining.ipynb
+++ b/7_association_mining.ipynb
@@ -49,20 +49,37 @@
    },
    "outputs": [],
    "source": [
-    "# We only require the columns which are in-house amenities (which are binary)\n",
+    "# We only require the columns which are in-house amenities (which are binary) and \n",
+    "# the room type (Full House/Private Room/Shared Room)\n",
+    "# and the property type (Condominium/House/Apartment)\n",
     "# Subset the data to include only these columns\n",
     "cols = [u'Elevator in building', u'Internet', u'Family/kid friendly', u'Wireless Internet',\n",
     "        u'Buzzer/wireless intercom', u'Kitchen', u'Doorman', u'Wheelchair accessible',\n",
     "        u'Cable TV', u'Hot tub', u'Gym', u'Pool', u'TV', u'Dryer', u'Washer', u'Essentials', u'Shampoo',\n",
     "        u'Heating', u'Air conditioning', u'Pets allowed', u'Suitable for events', \n",
     "        u'Smoking allowed', u'Indoor fireplace', u'Breakfast', u'Laptop friendly workspace', u'Iron',u'Hangers',\n",
-    "        u'Hair dryer',u'Private living room',u'Private entrance']\n",
+    "        u'Hair dryer',u'Private living room',u'Private entrance']#, 'property_type', 'room_type']\n",
     "df = df.ix[:,cols]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Do One-Hot encoding for variable Property_type\n",
+    "# df.loc[-df.property_type.isin(['House', 'Apartment', 'Condominium']), 'property_type'] = 'Other'\n",
+    "# df = pd.concat([df, pd.get_dummies(df['room_type'], prefix='room_type')], axis=1)\n",
+    "# df = pd.concat([df, pd.get_dummies(df['property_type'], prefix='property_type')], axis=1)\n",
+    "# df.drop(['room_type', 'property_type'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +120,7 @@
        "Name: 0, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +143,7 @@
        "u'Internet, Family/kid friendly, Wireless Internet, Kitchen, Dryer, Washer, Essentials, Shampoo, Heating, Air conditioning, Laptop friendly workspace, Iron, Hangers, Hair dryer'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,9 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -154,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -278,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -289,21 +306,21 @@
      "text": [
       "Number of Rules that satisfy the support threshold of (0.50) and confidence threshold of (0.90) is 386\n",
       "Supp Conf  Rule\n",
-      " 0.7  1.0  TV -> Heating\n",
-      " 0.7  1.0  TV -> Heating Kitchen\n",
-      " 0.7  1.0  TV Heating -> Kitchen\n",
-      " 0.7  1.0  TV Kitchen -> Heating\n",
-      " 0.7  0.9  TV -> Heating Kitchen Wireless Internet\n",
-      " 0.7  1.0  TV Heating -> Kitchen Wireless Internet\n",
-      " 0.7  1.0  TV Heating Kitchen -> Wireless Internet\n",
-      " 0.7  1.0  TV Heating Wireless Internet -> Kitchen\n",
-      " 0.7  1.0  TV Kitchen -> Heating Wireless Internet\n",
-      " 0.7  1.0  TV Kitchen Wireless Internet -> Heating\n",
-      " 0.7  1.0  TV Wireless Internet -> Heating Kitchen\n",
-      " 0.7  1.0  TV -> Heating Wireless Internet\n",
-      " 0.7  1.0  TV Heating -> Wireless Internet\n",
-      " 0.7  1.0  TV Wireless Internet -> Heating\n",
-      " 0.6  0.9  TV -> Essentials\n"
+      "0.67 0.98  TV -> Heating\n",
+      "0.66 0.96  TV -> Heating Kitchen\n",
+      "0.66 0.98  TV Heating -> Kitchen\n",
+      "0.66 0.98  TV Kitchen -> Heating\n",
+      "0.65 0.95  TV -> Heating Kitchen Wireless Internet\n",
+      "0.65 0.97  TV Heating -> Kitchen Wireless Internet\n",
+      "0.65 0.99  TV Heating Kitchen -> Wireless Internet\n",
+      "0.65 0.98  TV Heating Wireless Internet -> Kitchen\n",
+      "0.65 0.97  TV Kitchen -> Heating Wireless Internet\n",
+      "0.65 0.98  TV Kitchen Wireless Internet -> Heating\n",
+      "0.65 0.96  TV Wireless Internet -> Heating Kitchen\n",
+      "0.67 0.97  TV -> Heating Wireless Internet\n",
+      "0.67 0.99  TV Heating -> Wireless Internet\n",
+      "0.67 0.98  TV Wireless Internet -> Heating\n",
+      "0.62 0.90  TV -> Essentials\n"
      ]
     }
    ],
@@ -315,12 +332,12 @@
     "\n",
     "print \"%4s %4s  %s\" % (\"Supp\", \"Conf\", \"Rule\")\n",
     "for r in rules[:15]: # First 15 rules\n",
-    "    print \"%4.1f %4.1f  %s\" % (r.support, r.confidence, r)"
+    "    print \"%4.2f %4.2f  %s\" % (r.support, r.confidence, r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +354,7 @@
     "    \n",
     "rules_str = \"Supp, Conf, Rule \\n\"\n",
     "for r in rules:\n",
-    "    rules_str += \"%4.1f %4.1f  %s\" % (r.support, r.confidence, r) + '\\n'\n",
+    "    rules_str += \"%4.2f %4.2f  %s\" % (r.support, r.confidence, r) + '\\n'\n",
     "    \n",
     "with open('association-mining/rules_airbnb_amenities.txt', 'w') as f:\n",
     "    f.write(rules_str)\n"
